fixes #25: horizontal scrollbar

--- a/diversIT/src/styles.scss
+++ b/diversIT/src/styles.scss
@@ -353,8 +353,8 @@ Landing Page Header CSS
 ==============================*/
 
 .container {
-    width: 100%;
-    margin: 0px 20px 0px 20px;
+    width: max-content;
+    padding-left: 20px;
     }
     
 .navbar {
